1) added ui-grid-auto-resize to user.html to fix the issue of distorted Networks Tab (NDEX-578).  Resolution is described here: http://ui-grid.info/docs/#/tutorial/108_hidden_grids  The use ng-if="tabShown" ... described on the page above introduces another issue:  the selected rows on the Networks page get unselected if you select a different tab (i.e., Groups)  and come back to Networks tab; in this case the menu still shows Select Bulk Action and no Network is selected.  Also, removed "width: 100%" from .networkGrid class in ndex-angular-site.css. Leaving "width: 100%” still breaks/distorts the view in networks tab.
2) modified text in createBulkExportNetworkTask.html and createExportNetworkTask.html modals;
Renamed buttons from Create Task to Export Network (Export Networks).

--- a/css/ndex-angular-site.css
+++ b/css/ndex-angular-site.css
@@ -832,7 +832,9 @@ hr {
 
 .networkGrid
 {
-    width: 100%;
+    /* specifying width 100% will cause Network table to be distorted
+    when switching tabs and resizing browser window.  See NDEX-578 */
+    /*width: 100%;*/
     height: 640px;
 }
 
